--- a/views/homepage.html
+++ b/views/homepage.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 <!--Friend requests -->
-<div class="row" ng-if="pendingrequestslength>0">
+<!-- <div class="row" ng-if="pendingrequestslength>0">
   <div class="col-md-3">
     </div>
  <div class="col-md-6">
@@ -65,7 +65,7 @@
     </div> 
     <div class="col-md-3 ">
     </div>
-</div>
+</div> -->
 <!--end-->
 <!-- POSTS-->
   <div class="row yourfriendsposts">
