--- a/views/confirmpage.html
+++ b/views/confirmpage.html
@@ -1,6 +1,8 @@
 <div class="jumbotron text-center">
 	<h1 class="homehead">Confirm Friend</h1>
 </div>
-	<h3 ng-show="confirm" class="text-center">{{friendname}}
+<div>
+	<h3 ng-if="confirm==='1'" class="text-center">{{friendname}}
 		<span><input   type="button" class="btn btn-primary" ng-click="confirmfriend()" value="Confirm friend"  /></span>
 </h3>
+</div>
