--- a/views/homepage.html
+++ b/views/homepage.html
@@ -40,13 +40,83 @@
     <img class="profilepicture" ng-if="id==pic.uid && pic.pic_type=='PRIMARY'" ng-src="uploads/{{pic.name}}" width="125" height="125"/>
    </div>
     <h3 class="activityname" >{{name}}</h3>
-    <h3  ng-click="showpostsfn()"><span class="glyphicon glyphicon-pencil"></span> Posts</h3>
-    <h3  ng-click="addfriendsfn()"><span class="glyphicon glyphicon-search"></span> Search Friends</h3>
-    <h3  ng-click="profilepicturesfn()"><span class="glyphicon glyphicon-picture"></span> Profile Pictures</h3>
-    <h3  ng-click="pictureuploadsfn()"><span class="glyphicon glyphicon-camera"></span> Picture Uploads</h3>
+    <h3 ng-style="{color : showsearch ? '#E9967A' : '#1E90FF'}" class="headings1" ng-click="searchfn()"><span class="glyphicon glyphicon-search"></span> Search</h3>
+    <h3 ng-style="{color : showposts ? '#E9967A' : '#1E90FF'}" class="headings1" ng-click="showpostsfn()"><span class="glyphicon glyphicon-pencil"></span> Posts</h3>
+    <h3 ng-style="{color : addfriends ? '#E9967A' : '#1E90FF'}" class="headings1" ng-click="addfriendsfn()"><span class="glyphicon glyphicon-search"></span> Search Friends</h3>
+    <h3 ng-style="{color : profilepictures ? '#E9967A' : '#1E90FF'}" class="headings1" ng-click="profilepicturesfn()"><span class="glyphicon glyphicon-picture"></span> Profile Pictures</h3>
+    <h3 ng-style="{color : pictureuploads ? '#E9967A' : '#1E90FF'}" class="headings1" ng-click="pictureuploadsfn()"><span class="glyphicon glyphicon-camera"></span> Picture Uploads</h3>
   </div>
   <div class="col-md-6">
     <!--show posts -->
+    <div ng-show="showsearch">
+      <div class="input-group" id="search_id">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+    <input ng-keyup="search()"  ng-model="searchmodel" type="text" class="form-control" name="msg" placeholder="Search">
+    </div>
+    <ul class="nav nav-pills nav-justified" id="navpills">
+    <li><a ng-style="{color : table2 ? '#E9967A' : '#1E90FF'}" ng-click="peoplefn()">People</a></li>
+    <li><a ng-style="{color : table1 ? '#E9967A' : '#1E90FF'}" ng-click="postsfn()">Posts</a></li>
+    <li><a ng-style="{color : table3 ? '#E9967A' : '#1E90FF'}" ng-click="imagesfn()">Images</a></li>
+  </ul>
+    <table class="table table-condensed" ng-show="table3">
+    <thead>
+      <tr>
+        <th>PicId</th>
+        <th>uid</th>
+        <th>Name</th>
+        <th>PicType</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="x in data3">
+        <td>{{x.picid}}</td>
+        <td>{{x.uid}}</td>
+        <td>{{x.name}}</td>
+        <td>{{x.pic_type}}</td>
+
+      </tr>
+    </tbody>
+  </table>
+   <table class="table table-condensed" ng-show="table1">
+    <thead>
+      <tr>
+        <th>pid</th>
+        <th>uid</th>
+        <th>Name</th>
+        <th>Post</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="y in data1">
+        <td>{{y.pid}}</td>
+        <td>{{y.uid}}</td>
+        <td>{{y.name}}</td>
+        <td>{{y.post}}</td>
+
+      </tr>
+    </tbody>
+  </table>
+  <table class="table table-condensed" ng-show="table2">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Education</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="z in data2">
+        <td>{{z.id}}</td>
+        <td>{{z.name}}</td>
+        <td>{{z.email}}</td>
+        <td>{{z.education}}</td>
+
+      </tr>
+    </tbody>
+  </table>
+    </div>
+
     <div ng-show="showposts">
      <div ng-repeat="post in likefilter">
            <div ng-repeat="x in farray">
